[package]
name = "odot"
version = "0.1.0"
authors = ["Veeti Haapsamo <veeti.haapsamo@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "~2.32"
dirs = "1.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
uuid = { version = "0.7.1", features = ["v4", "serde"] }